--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
         </div>
         <!-- Boton de envio -->
         <button class="btn btn-info btn-block" type="submit" id="btnEnvio">Enviar</button>
+        <button class="btn btn-secondary btn-block" type="submit" id="btnHistorial">Ver Agregados</button>
     </form>
 
     <div id="provinciaAgregada">
     </div>
+
+    <div id="listaProvincias"></div>
 
 
 </main>
